--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -18,34 +19,40 @@
     "babel-plugin-macros": "^3.1.0",
     "chart.js": "^4.2.1",
     "chat.js": "^1.0.2",
-    "expo": "~48.0.11",
-    "expo-av": "^13.2.1",
-    "expo-barcode-scanner": "^12.3.2",
-    "expo-camera": "~13.2.1",
-    "expo-checkbox": "~2.3.1",
-    "expo-file-system": "~15.2.2",
-    "expo-font": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-av": "~13.4.1",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.2",
+    "expo-checkbox": "~2.4.0",
+    "expo-file-system": "~15.4.2",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.1",
+    "expo-notifications": "~0.20.1",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.8",
     "font-awesome": "^4.7.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.72.1",
+    "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-curved-bottom-bar": "^3.2.6",
     "react-native-fontawesome": "^7.0.0",
-    "react-native-gesture-handler": "^2.10.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-keypad": "^1.0.0-rc2",
+    "react-native-permissions": "^3.8.0",
     "react-native-pie-chart": "^2.1.1",
-    "react-native-reanimated": "^3.1.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.19.4",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "rn-sliding-up-panel": "^2.4.6",
-    "socket.io-client": "^4.6.1",
+    "sentry-expo": "~7.0.0",
+    "socket.io-client": "^4.6.2",
     "victory-native": "^36.6.8"
   },
   "devDependencies": {
