--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/art": "^1.2.0",
-    "@react-native-community/checkbox": "^0.5.15",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-native-community/checkbox": "^0.5.16",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "babel-plugin-macros": "^3.1.0",
-    "chart.js": "^4.2.1",
+    "chart.js": "^4.3.0",
     "chat.js": "^1.0.2",
     "expo": "^49.0.0",
     "expo-av": "~13.4.1",
@@ -29,31 +29,32 @@
     "expo-image-picker": "~14.3.1",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.8",
+    "expo-updates": "~0.18.10",
+    "fbemitter": "^3.0.0",
+    "fbjs": "^3.0.5",
     "font-awesome": "^4.7.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-native": "0.72.1",
+    "react-native": "0.72.3",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-curved-bottom-bar": "^3.2.6",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-image-picker": "^5.3.1",
+    "react-native-image-picker": "^5.6.0",
     "react-native-keypad": "^1.0.0-rc2",
-    "react-native-permissions": "^3.8.0",
+    "react-native-permissions": "^3.8.4",
     "react-native-pie-chart": "^2.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.19.6",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "rn-sliding-up-panel": "^2.4.6",
     "sentry-expo": "~7.0.0",
-    "socket.io-client": "^4.6.2",
-    "victory-native": "^36.6.8"
+    "socket.io-client": "^4.7.1",
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
