--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     "babel-plugin-macros": "^3.1.0",
     "chart.js": "^4.3.0",
     "chat.js": "^1.0.2",
-    "expo": "^49.0.0",
+    "expo": "^49.0.6",
     "expo-av": "~13.4.1",
     "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.2",
     "expo-checkbox": "~2.4.0",
     "expo-file-system": "~15.4.2",
     "expo-font": "~11.4.0",
-    "expo-image-picker": "~14.3.1",
+    "expo-image-picker": "^14.3.2",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.10",
+    "expo-updates": "^0.18.11",
     "fbemitter": "^3.0.0",
     "fbjs": "^3.0.5",
     "font-awesome": "^4.7.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-native": "0.72.3",
+    "react-native": "^0.72.3",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-curved-bottom-bar": "^3.2.6",
