--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "expo-contacts": "^12.2.0",
     "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
-    "expo-image": "^1.3.2",
+    "expo-image": "~1.3.4",
     "expo-image-picker": "^14.3.2",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.12",
+    "expo-updates": "~0.18.14",
     "fbemitter": "^3.0.0",
     "fbjs": "^3.0.5",
     "font-awesome": "^4.7.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-curved-bottom-bar": "^3.2.6",
