--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "rn-sliding-up-panel": "^2.4.6",
     "sentry-expo": "~7.0.0",
     "socket.io-client": "^4.7.1",
-    "victory-native": "^36.6.11"
+    "victory-native": "^36.6.11",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
